@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-21T00:41:41Z",
-  "count" : 22,
+  "timestamp" : "2023-10-04T16:12:42Z",
+  "count" : 12,
   "count_minmax" : [ 10, 22 ],
-  "count_decinc" : [ -0, +22 ],
-  "uniques" : 2,
+  "count_decinc" : [ -10, +22 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
