@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-10-04T00:42:47Z",
+  "timestamp" : "2023-10-04T16:12:42Z",
   "count_outdated" : 1754,
   "uniques_outdated" : 606,
-  "count" : 1820,
-  "uniques" : 619,
+  "count" : 1827,
+  "uniques" : 620,
   "views" : [
     {
       "timestamp": "2023-09-20T00:00:00Z",
-      "count": 22,
+      "count": 12,
       "count_minmax": [ 10, 22 ],
-      "count_decinc": [ 0, 22 ],
-      "uniques": 2,
+      "count_decinc": [ 10, 22 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-09-23T00:00:00Z",
@@ -76,6 +76,15 @@
       "uniques": 3,
       "uniques_minmax": [ 2, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2023-10-04T00:00:00Z",
+      "count": 7,
+      "count_minmax": [ 7, 7 ],
+      "count_decinc": [ 0, 7 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
