@@ -1,11 +1,11 @@
 {
-  "count": 66,
+  "count": 63,
   "uniques": 13,
   "views": [
     {
       "timestamp": "2023-09-20T00:00:00Z",
-      "count": 22,
-      "uniques": 2
+      "count": 12,
+      "uniques": 1
     },
     {
       "timestamp": "2023-09-23T00:00:00Z",
@@ -41,6 +41,11 @@
       "timestamp": "2023-10-03T00:00:00Z",
       "count": 5,
       "uniques": 3
+    },
+    {
+      "timestamp": "2023-10-04T00:00:00Z",
+      "count": 7,
+      "uniques": 1
     }
   ]
 }
