@@ -1,3 +1,12 @@
+2023-10-04T16:12:42Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6408668576 # 1956
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-04
+* notice: last 14d: unq all: 13 63
+* notice: prev accum: outdated-unq outdated-all / unq all: 606 1754 / 619 1820
+* notice: next accum: outdated-unq outdated-all / unq all: 606 1754 / 620 1827
+* notice: prev exec diff / last date diff / accum: unq all: +1 +7 -1 -10 / +1 +7 -0 -0 / 1 7
+* notice: removed / changed dates: [] / [2023-09-20 2023-10-04]
+
 2023-10-04T00:42:47Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6400064139 # 1954
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-04
